--- a/styles.css
+++ b/styles.css
@@ -176,3 +176,6 @@ padding-bottom: 500px;
     background-color: darkcyan;
     color:white;
 }
+.winning-tiles{
+    background-color:lightslategray;
+}
